Feature/issue 1/add prettier (#1)
* add server port config

* add prettier

---------

Co-authored-by: Emmanuelle BONOLI <manu.bonoli@gmail.com>